# ClaimMate

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEMO_PLAYBOOK_ZH.md  KE_WU_HANDOFF_ZH.md  LOU_FRONTEND_API_EXAMPLE_ZH.md  README.md  YI_HSIEN_LOU_HANDOFF_ZH.md  plan.md  railway.json
backend/: .env.example  Dockerfile  main.py  pyproject.toml  try_ws.py
backend/ai/: __init__.py  clients.py  config.py  runtime.py
backend/app/: __init__.py  accident_codec.py  auth_core.py  auth_deps.py  auth_service.py  case_access.py  case_service.py  case_validation.py  chat_dispatch.py  chat_serialize.py  demo_case_service.py  demo_policy_service.py  demo_seed_data.py  deps.py  incident_photo_upload.py  logging_utils.py  paths.py  policy_upload.py  storage_runtime.py  ws_room_manager.py
backend/models/: accident_types.py  ai_types.py  auth_orm.py  case_orm.py
backend/scripts/: bootstrap_cloud_data.py  index_local_kb_b.py  ingest_local_policy.py  query_local_rag.py  run_chat_ai_eval.py  run_collab_smoke.py  run_demo_eval.py  run_demo_smoke.py  run_shared_backend.sh  seed_accident_demo.py  seed_demo_policy.py
backend/tests/: test_accident_codec.py  test_accident_payload_builder.py  test_auth_core.py  test_chat_ai_service.py  test_chunker.py  test_citation_formatter.py  test_clients.py  test_deadline_checker.py  test_demo_case_service.py  test_demo_eval.py  test_demo_policy_service.py  test_demo_seed_data.py  test_demo_smoke.py  test_embedder.py  test_html_parser.py  test_ingest_policy.py  test_integration_cases_db.py  test_kb_b_loader.py  test_main.py  (+9 more)
(+161 files in other folders)
