[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claimmate-backend"
version = "0.1.0"
description = "ClaimMate AI Core MVP backend"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0",
    "fastapi>=0.115.0",
    "html2text>=2024.2.26",
    "openai>=1.107.0",
    "pdfplumber>=0.11.0",
    "pgvector>=0.4.1",
    "python-multipart>=0.0.20",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.0.0",
    "pypdf>=4.0.0",
    "requests>=2.31.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "tiktoken>=0.7.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.setuptools]
packages = ["ai", "ai.chat", "ai.deadline", "ai.dispute", "ai.ingestion", "ai.policy", "ai.rag", "models"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
